--- a/trunk/public/css/ernest.css
+++ b/trunk/public/css/ernest.css
@@ -25,7 +25,7 @@ p {
 }
 
 body {
-	width: 900px;
+	width: 1000px;
 	margin: 0px auto;
 	font-family: "Nexa";
 	font-size: 12px;
@@ -54,10 +54,10 @@ h1 {
 	overflow: auto;
 	/*border: 1px solid #000000;*/
 	background-color: #ffffff;
-	padding: 20px 0px 20px 0px;
+	padding: 0px 0px 20px 0px;
 	box-shadow: #aaa 2px 2px 10px 1px;
 	min-height: 600px;
-	margin-top: 20px;
+	margin-top: 20px
 	}
 
 #fitur {
@@ -68,6 +68,16 @@ h1 {
 
 #top {
 	padding: 0px 20px 0px 20px;
+}
+/*dasbor*/
+#g1 {
+	width:520px; height:380px;
+	margin-left: -30px
+}
+#g2, #g3, #g4, #g5, #g6, #g7, #g8, #g9  {
+	width:170px; height:140px;
+	/*border: 1px solid red;*/
+	margin: -5px;
 }
 
 /*Dropdown menu*/
@@ -196,18 +206,11 @@ h1 {
 .kolom1, .kolom2 {
 	width: 50%;
 	float: left;
-	margin: 20px 0px 0px 0px;
-}
-
-.kolom1 {
-	margin-left: 60px;
-	margin-right: -60px;
-	
+	margin: 50px -40px 0px 0px;
 }
 
 .kolom2 {
-	margin-right: 10px;
-	margin-left: -20px;
+	margin-right: 0px;
 	
 }
 
