--- a/public/css/ernest.css
+++ b/public/css/ernest.css
@@ -43,11 +43,35 @@ h1 {
 }
 
 
-#header {
-	float: left;
-	width: 100%;
-	margin: 0px 0px 0px 0px;
-	background-color: #ffffff;
+header{
+    position:relative;
+    color:#fff;
+    background:#f43059;
+    font-size:1.5em;
+    float:left;
+    clear:both;
+    padding:30px 10px 30px 10px;
+	margin-left: 50px;
+    margin-top: -10px;
+	margin-right: -100px;
+    text-shadow:0 -1px #d0284b, 0 1px #f96080;
+
+    -moz-box-shadow:2px 2px 0 rgba(0,0,0,0.1);
+    -webkit-box-shadow:2px 2px 0 rgba(0,0,0,0.1);
+    -o-box-shadow:2px 2px 0 rgba(0,0,0,0.1);
+    box-shadow:2px 2px 0 rgba(0,0,0,0.1);
+}
+header:before{
+    content:" ";
+    background:url('../img/ribbon.png');
+    display:block;
+    width:10px;
+    height:10px;
+    position:absolute;
+    top:0;
+    left:0;
+    margin-left:-10px;
+    z-index:1;
 }
 
 #wrapper {
@@ -56,7 +80,7 @@ h1 {
 	background-color: #ffffff;
 	padding: 0px 0px 20px 0px;
 	box-shadow: #aaa 2px 2px 10px 1px;
-	min-height: 600px;
+	min-height: 550px;
 	margin-top: 20px
 	}
 
@@ -72,12 +96,12 @@ h1 {
 /*dasbor*/
 #g1 {
 	width:520px; height:380px;
-	margin-left: -30px
+	margin-left: -45px
 }
 #g2, #g3, #g4, #g5, #g6, #g7, #g8, #g9  {
-	width:170px; height:140px;
+	width:180px; height:140px;
 	/*border: 1px solid red;*/
-	margin: -5px;
+	margin: -15px;
 }
 
 /*Dropdown menu*/
@@ -86,7 +110,7 @@ h1 {
 	background: #333;
 	border-bottom: 4px solid #49afcd;
 	font-family: 'Menu';
-	font-size: 18px; 
+	font-size: 15px; 
 	}
 #menu ul, #menu li {list-style: none; margin: 0; padding: 0;}
 #menu ul {position: relative; z-index: 597; }
@@ -271,7 +295,7 @@ legend {
   font-weight: bold;
 }
 	
-input, select, textarea, button {
+input, select, textarea {
 	font-family: Nexa;
 	font-size: 90%;
 	border-radius: 5px;
@@ -281,6 +305,12 @@ input, select, textarea, button {
 	background-position: 8px 9px;
 	display: block;
 	margin-bottom: 7px;
+	}
+
+button {
+	cursor: pointer; 
+	margin: -3px;
+	padding: 10px
 	}
 
 input.utama,
@@ -351,7 +381,7 @@ input[type="checkbox"] {
 	
 }
 
-input[type="button"], button{
+input[type="button"]{
 	color: #ffffff;
 	background-color: #49afcd;
 	width: 100px;
@@ -382,11 +412,6 @@ input.normal[type="submit"] :focus, input.normal[type="submit"]:hover {
 	border-color: #bd362f;
 }
 
-button :focus, button:hover, input[type="button"] :focus, input[type="button"] :hover {
-	color: #ffffff;
-	background-color: #2f96b4;
-	border-color: #2f96b4;
-}
 
 input[disabled]{
 	cursor: not-allowed;
