--- a/trunk/public/css/ernest.css
+++ b/trunk/public/css/ernest.css
@@ -110,13 +110,13 @@ header:before{
 }
 /*dasbor*/
 #g1 {
-	width:520px; height:380px;
-	margin-left: -45px
+	width:480px; height:380px;
+	
+	
 }
-#g2, #g3, #g4, #g5, #g6, #g7, #g8, #g9  {
-	width:180px; height:140px;
-	/*border: 1px solid red;*/
-	margin: -15px;
+#g2, #g3  {
+	width:300px; height:240px;
+	
 }
 
 /*Dropdown menu*/
@@ -245,11 +245,11 @@ header:before{
 .kolom1, .kolom2 {
 	width: 50%;
 	float: left;
-	margin: 50px -40px 0px 0px;
+	margin: 20px -60px 0px 0px;
 }
 
 .kolom2 {
-	margin-right: 0px;
+	margin-right: 0%;
 	
 }
 
@@ -324,8 +324,7 @@ input, select, textarea {
 
 button {
 	cursor: pointer; 
-	margin: -3px;
-	padding: 10px
+	
 	}
 
 input.utama,
