--- a/public/css/ernest.css
+++ b/public/css/ernest.css
@@ -233,10 +233,6 @@ header:before{
 	padding: 0px 10px 0px 10px;
 	}
 
-.kiris {
-	padding: 0px 30px 0px 30px;
-	}
-
 .kanan {
 	float: right;
 }
@@ -276,9 +272,11 @@ header:before{
 	margin: 0px 0px 0px 40px;
 }
 
-.tiga .kolom {
-	width: 33%;
-	float: left;
+.kolom5 {
+	float:right;
+	width: 50%;
+	margin: 0px 0px 10px 10px;
+	
 }
 
 .sukses {
