--- a/trunk/public/css/ernest.css
+++ b/trunk/public/css/ernest.css
@@ -115,10 +115,9 @@ header:before{
 #g1 {
 	width:480px; height:380px;
 	
-	
 }
-#g2, #g3  {
-	width:300px; height:240px;
+#g2, #g3, #g4  {
+	width:400px; height:165px;
 	
 }
 
@@ -206,8 +205,15 @@ header:before{
 	background-color:rgba(0,121,185,0.5);
 	border: 2px solid rgba(0,121,185,1);
 }
-
-
+.hijau {
+	background-color: rgba(94,140,106, 0.5);
+	border: 2px solid rgba(94,140,106,1);
+}
+.bg {
+	background-color: rgba(238,238,238, 0.5);
+	padding: 20px;
+	margin: 30px;
+}
 
 .blok {
 	width: 100px;
@@ -245,7 +251,7 @@ header:before{
 .kolom1, .kolom2 {
 	width: 50%;
 	float: left;
-	margin: 20px -60px 0px 0px;
+	margin: 20px 0px 0px 0px;
 }
 
 .kolom2 {
