--- a/public/css/ernest.css
+++ b/public/css/ernest.css
@@ -80,17 +80,6 @@ header:before{
     margin-left:-10px;
     z-index:1;
 }
-/*
-#gambar {
-    background-image:url('../img/line.png') ;
-	margin-top: 20px;
-	margin-left: auto; margin-right: auto;
-	width: 600px;
-	height: 200px;
-	max-height: 200px;
-	background-repeat: no-repeat;
-}
-*/
 
 #wrapper {
 	overflow: auto;
@@ -99,6 +88,17 @@ header:before{
 	padding: 0px 0px 20px 0px;
 	box-shadow: #aaa 2px 2px 10px 1px;
 	min-height: 550px;
+	margin-top: 20px
+	}
+
+#log {
+	overflow: auto;
+	/*border: 1px solid #000000;*/
+	background-color: #ffffff;
+	padding: 0px 0px 20px 0px;
+	box-shadow: #aaa 2px 2px 10px 1px;
+	height: 300px;
+	
 	margin-top: 20px
 	}
 
@@ -191,6 +191,7 @@ header:before{
 	height: 20px;
 	 
 }
+
 
 /*legenda*/
 .ungu {
