--- a/trunk/public/css/ernest.css
+++ b/trunk/public/css/ernest.css
@@ -87,7 +87,7 @@ header:before{
 	background-color: #ffffff;
 	padding: 0px 0px 20px 0px;
 	box-shadow: #aaa 2px 2px 10px 1px;
-	min-height: 550px;
+	min-height: 500px;
 	margin-top: 20px
 	}
 
@@ -117,9 +117,22 @@ header:before{
 	
 }
 #g2, #g3, #g4  {
-	width:400px; height:165px;
-	
+	width:200px; height:165px;
+	/*border: 1px solid blue;*/
+	border-radius: 5px;
+	background-image:url('../img/bg.png');
+	box-shadow: #aaa 3px 3px 3px;
 }
+
+.kolom1 a, .kolom2 a {
+	text-decoration: none;
+}
+a #g2:hover, a #g3:hover, a #g4:hover {
+	box-shadow: #2f96b4 3px 3px 3px;
+	/*width: 100.05%;*/
+	margin-left: 2px;
+	/*margin-top: 2px;*/
+	}
 
 /*Dropdown menu*/
 #menu {
@@ -252,7 +265,16 @@ header:before{
 	padding-left: 40px;
 }
 
+.kolom1, .kolom2 {
+	width: 50%;
+	float: left;
+	margin: 20px 0px 0px 0px;
+}
 
+.kolom2 {
+	margin-right: 0%;
+	
+}
 .kolomx, .kolomy, .kolomz {
 	width: 33%;
 	float: left;
@@ -263,6 +285,11 @@ header:before{
 	margin-right: 0%;
 	
 }
+
+.kolomx fieldset, .kolomy fieldset, .kolomz fieldset {
+	height: 200px;
+}
+
 
 #jam.kolom2{
 	text-align: center;
@@ -285,7 +312,7 @@ header:before{
 
 .kolom4 {
 	margin-right: 0%;
-	border: 1px solid #5bb75b;
+	/*border: 1px solid #5bb75b;*/
 }
 
 .kolom5 {
@@ -1210,3 +1237,18 @@ th, td {
 	}
 
 	.close:hover { background: #49afcd; }
+
+footer {
+	margin-left: 10px;
+	background: #333;
+	height: 40px;
+	margin-top: -12px;
+	padding: 10px;
+	box-shadow: #aaa 0px 2px 10px 1px;
+	color: #aaa;
+}
+
+footer a {
+	text-decoration: none;
+	color: rgba(0,121,185,1);
+}
