--- a/trunk/public/js/jquery-ui-1.10.3/themes/base/jquery.ui.datepicker.css
+++ b/trunk/public/js/jquery-ui-1.10.3/themes/base/jquery.ui.datepicker.css
@@ -16,6 +16,7 @@
 .ui-datepicker .ui-datepicker-header {
 	position: relative;
 	padding: .2em 0;
+
 }
 .ui-datepicker .ui-datepicker-prev,
 .ui-datepicker .ui-datepicker-next {
@@ -53,6 +54,8 @@
 	margin: 0 2.3em;
 	line-height: 1.8em;
 	text-align: center;
+	font-size: 60%;
+	margin-top: 5px;
 }
 .ui-datepicker .ui-datepicker-title select {
 	font-size: 1em;
